# mobile-icon-maker

./: CMakeLists.txt  codemagic.yaml  main.cpp
src/: main.cpp
